--- a/src/themes/default/styles.css
+++ b/src/themes/default/styles.css
@@ -44,7 +44,7 @@
     position: relative;
     width: 310px;
     max-height: 500px;
-    margin-left: -200px;
+    margin-left: -190px;
     padding: 0px 0px 40px;
     background: #fbfbfb;
     border: 1px solid #d7d7d7;
@@ -79,12 +79,13 @@
 
 
 #PPMiniCart .minicart-closer {
+    color: white;
     float: right;
-    margin: -12px -10px 0;
-    padding: 20px;
+    margin: 0px 10px 0;
+    padding: 10px;
     background: 0;
     border: 0;
-    font-size: 14px;
+    font-size: 28px;
     cursor: pointer;
     font-weight: bold;
 }
@@ -178,13 +179,13 @@
 #PPMiniCart .minicart-remove {
     width: 18px;
     height: 19px;
-    margin: 2px 0 0;
+    margin: -1px 0 0;
     padding: 0;
     background: #b7b7b7;
     border: 1px solid #a3a3a3;
     border-radius: 3px;
     color: #fff;
-    font-size: 13px;
+    font-size: 18px;
     opacity: 0.70;
     cursor: pointer;
 }
